# informed

./: .env.example  .gitignore  README.md  docker-compose.yml  how-to-run.md
grafana/provisioning/dashboards/: dashboards.yml  informed.json
grafana/provisioning/datasources/: prometheus.yml
informed-be/: .dockerignore  Dockerfile  pyproject.toml
informed-be/informed_be/: __init__.py  main.py  metrics.py
informed-be/informed_be/api/: routes.py
informed-be/informed_be/config/: dev.env  logging.py  settings.py
informed-be/informed_be/db/: __init__.py  db.py
informed-be/informed_be/models/: __init__.py  schemas.py
informed-be/informed_be/services/: __init__.py  ocr_service.py
informed-be/informed_be/workflows/: __init__.py  ingredient_graph.py
informed-fe/: .gitignore  Dockerfile  pyproject.toml
informed-fe/informed_fe/: app.py  metrics.py
informed-fe/informed_fe/components/: __init__.py  result_display.py
informed-fe/informed_fe/config/: __init__.py  dev.env  logging.py  settings.py
informed-fe/informed_fe/models/: __init__.py  schemas.py
informed-fe/informed_fe/services/: storage_service.py
prometheus/: prometheus.yml
scripts/: load_test.py
