[project]
name = "informed-be"
version = "0.1.0"
description = "Food Ingredient Health Analyzer - Backend API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.11.0",
    "pydantic-settings>=2.10.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "python-multipart>=0.0.9",
    "easyocr>=1.7.0",
    "langgraph>=0.2.0",
    "langchain-core>=0.2.0",
    "langchain-groq>=0.1.0",
    "prometheus-fastapi-instrumentator>=7.0.0",  # Prometheus metrics
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["informed_be*"]
